# voynich-morphemic-decryption

./: .env.example  .gitattributes  .gitignore  .zenodo.json  6_COMPREHENSIVE_ANALYSIS_GUIDE.md  ALL_PAGES_COMPLETE.txt  BREAKTHROUGH_PAGE_008.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  EPIC_FINAL_SUMMARY.md  Email_Template_arXiv_Submission.md  FINALNE_PODSUMOWANIE.md  FINAL_MAPPING_v2.0.json  FINAL_SUCCESS.txt  FINAL_SUMMARY_MATEUSZ.md  FOLIO_67v_YSHEDY_ANALYSIS.txt  METHODOLOGY_UPDATE.md  PREFIXES_COMPLETE_CATALOG.md  PRZELOM_RADIX.md  PUSH_TO_GITHUB.md  README.md  SECURITY.md  VOYNICH_UNIFIED_CLEAN_COMPLETE.json  YSHEDY_DEEP_BREAKTHROUGH_ANALYSIS.txt  YSHEDY_HYPOTHESIS_CHAIN.json  YSHEDY_LINGUISTIC_BREAKDOWN.md  YSHEDY_ROSETTA_STONE_COMPLETE.md  YSHEDY_ULTIMATE_SUMMARY.md  ZENODO_UPDATE_INSTRUCTIONS.md  ZODIAC_SECTION_COMPLETE_RAW.json  ZODIAC_SECTION_YSHEDY_COMPLETE_ANALYSIS.txt  ZODIAC_SECTION_YSHEDY_DATA.json  analyze_67v_yshedy.py  analyze_yshedy_breakthrough.py  analyze_zodiac_yshedy_complete.py  cipher_breaker.py  download_all_pages.py  (+45 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci-pipeline.yml  docs.yml  release.yml
Docker/: Dockerfile  docker-compose.yml
analysis/: PUBLICATION_PACKAGE_v2.0.md  RAPORT_KRYPTOGRAFICZNY.md  SZYBKI_START.md  TODO.md
analysis/botanical/: ANALIZA_BOTANICZNA_006_010.md  ANALIZA_STRON_004_005.md  (+1 more)
scripts/: analyze_top_100_words.py  convert_csv_to_json.py  deploy_zenodo.py  generate_final_report.py  run_analysis.py
tests/: conftest.py
voynich_decryption/: COMPREHENSIVE_ANALYSIS_GUIDE.md  Justification_Independent_Researcher_Status.md  Methodology_Guide_Detailed_Breakdown.md  Voynich_Clean_Facts_Only_XV_Century.md  voynich_top_100_words.csv
(+78 files in other folders)
