[metadata]
name = voynich-morphemic-decryption
version = attr: voynich_decryption.__version__.__version__
description = Advanced morphemic analysis & decryption of Voynich Manuscript
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mati83moni/voynich-morphemic-decryption
author = Mateusz Piesiak
author_email = mateuszpiesiak1990@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.11
install_requires =
    numpy>=1.26.0
    pandas>=2.1.0
    scikit-learn>=1.3.0
    scipy>=1.11.0
    xgboost>=2.0.0
    fastapi>=0.104.0
    pydantic>=2.4.0
    uvicorn[standard]>=0.24.0
    plotly>=5.17.0
    matplotlib>=3.8.0
    requests>=2.31.0
    python-dotenv>=1.0.0
    pyyaml>=6.0.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    voynich = voynich_decryption.cli.main:app

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.11.0
    ruff>=0.1.0
    mypy>=1.6.0

[flake8]
max-line-length = 100
extend-ignore = E203, E501
exclude = .git,__pycache__,build,dist,.eggs

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
